# djangomarket

./: .gitignore  pyproject copy.toml  pyproject.toml  비전 AI 플랫폼_요구사항정의서.xlsx  비전 AI 플랫폼_요구사항정의서_수정.xlsx  샘플.xlsx
djangomarket/: ORM조회.ipynb  erd.dot  erd_sub.dot  manage.py  my_project_visualized.dot  serializer.ipynb  test.ipynb  test.py
djangomarket/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
djangomarket/accounts/: admin.py  forms.py  models.py  urls.py  views.py
djangomarket/accounts/migrations/: 0001_initial.py
djangomarket/ai/: admin.py  forms.py  models.py  urls.py  views.py
djangomarket/ai/migrations/: 0001_initial.py  0002_auto_20230705_0921.py  0003_auto_20230706_0857.py  0004_aidetail_inferencemodel_task.py  0005_inferencemodel_task.py  0006_remove_aidetail_model_name.py  0007_auto_20230717_1134.py  0007_auto_20230718_1345.py  0008_merge_20230804_1515.py
djangomarket/blog1/: admin.py  models.py  urls.py  views.py
djangomarket/blog1/migrations/: 0001_initial.py  0002_auto_20230607_1331.py  0003_post_author.py
djangomarket/djangomarket/: asgi.py  settings copy.py  settings.py  urls.py  wsgi.py
djangomarket/djangomarket/templates/: layout.html  root.html
djangomarket/drf/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
djangomarket/drf/migrations/: 0001_initial.py  0002_post_author.py  0003_post_is_public.py  0004_aidetail_inferencemodel_task.py  0005_auto_20230718_1358.py  0006_auto_20230802_1609.py
djangomarket/instagram/: admin.py  forms.py  models.py  urls.py  views.py
djangomarket/market/: models.py
(+33 files in other folders)
