[tool.poetry]
name = "djangomarket"
version = "0.1.0"
description = ""
authors = ["PhilPark-geosr <parkpill26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = ">=3.0.0,<3.1.0"
pillow = "^9.5.0"
jupyter = "^1.0.0"
notebook = "^6.5.4"
django-extensions = ">=3.0.0,<3.1.0"
django-debug-toolbar = ">=3.2.0,<3.3.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
